# gatemate-designs

./: README.md  common.mk
blink/: Makefile
hello/: Makefile
hello/src/: hello.ccf  hello.vhdl
load-example/: CMakeLists.txt  hello_core1.c  memmap_sram.ld
